build: update package.json

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "Encryption",
     "AES"
   ],
-  "author": "",
+  "author": "hypensterisk",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/hypensterisk/aes-encryption/issues"
