--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
   },
   "homepage": "https://github.com/hypensterisk/aes-encryption#readme",
   "devDependencies": {
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "parcel": "^2.8.0"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
