--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
   },
   "homepage": "https://github.com/hypensterisk/aes-encryption#readme",
   "devDependencies": {
+    "@types/bootstrap": "^5.2.6",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "parcel": "^2.8.0"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0"
   }
 }
