--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/hypensterisk/aes-encryption#readme",
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
+    "@types/crypto-js": "^4.1.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "parcel": "^2.8.0"
@@ -35,6 +36,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.2.3",
+    "crypto-js": "^4.1.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
