--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@types/crypto-js": "^4.1.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "parcel": "^2.8.0"
+    "parcel": "^2.8.0",
+    "process": "^0.11.10"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
