--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@parcel/service-worker": "^2.8.0",
     "bootstrap": "^5.2.3",
     "crypto-js": "^4.1.1",
     "formik": "^2.2.9",
