--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
+    "jsx": "react-jsx",
+    "lib": ["ES2015"],
     "module": "ES2020",
-    "moduleResolution": "Node",
-    "jsx": "react-jsx"
+    "moduleResolution": "Node"
   }
 }
