--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/hypensterisk/aes-encryption#readme",
   "devDependencies": {
     "@parcel/packager-raw-url": "^2.8.0",
+    "@parcel/transformer-sass": "^2.8.0",
     "@parcel/transformer-webmanifest": "^2.8.0",
     "@types/bootstrap": "^5.2.6",
     "@types/crypto-js": "^4.1.1",
